# bracket-pool-odds-predictor

bracket-pool-odds-predictor/: README.md  pyproject.toml  tasks.py
bracket-pool-odds-predictor/bp_odds/data/: aggregate.py  feature.py  read.py  transform.py  write.py
bracket-pool-odds-predictor/bp_odds/model/: evaluate.py  visualize.py
bracket-pool-odds-predictor/bp_odds/polar/data/: read.py
bracket-pool-odds-predictor/scripts/pdm/: train.py  train_polars.py
bracket-pool-odds-predictor/scripts/time_series/: train.py
bracket-pool-odds-predictor/tests/: utils.py
bracket-pool-odds-predictor/tests/unit/: test_transform.py
