[tool.poetry]
name = "bp_odds"
version = "0.1.0"
description = "a package for predicting the odds you win your given bracket pool"
authors = ["Patrick Bray"]
readme = "README.md"
packages = [{include = "bp_odds"}]

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "^2.4.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
fire = "^0.5.0"
loguru = "^0.7.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
black = {extras = ["jupyter"], version = "^23.3.0"}
flake8 = "^6.0.0"
ipykernel = "^6.23.2"
pytest = "^7.3.2"
isort = "^5.12.0"
beavis = "^0.3.0"
ghp-import = "^2.1.0"
pdoc = "^13.1.1"
invoke = "^2.1.3"
jupyter = {extras = ["black"], version = "^1.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[flake8]
max-line-length = 120
max-complexity = 10
